# openf1

api/: README.md
mcp/: README.md  requirements.txt
mcp/src/: openf1_client.py  server.py
mcp/src/dto/: car_data_dto.py  driver_dto.py  interval_dto.py  lap_dto.py  location_dto.py  mcp_response.py  meeting_dto.py  overtake_dto.py  pit_dto.py  position_dto.py  race_control_dto.py  session_dto.py  session_result_dto.py  starting_grid_dto.py  stint_dto.py  team_radio_dto.py  weather_dto.py
mcp/src/tools/: car_data_tools.py  drivers_tools.py  healthz_tools.py  intervals_tools.py  laps_tools.py  location_tools.py  meetings_tools.py  overtakes_tools.py  pit_tools.py  position_tools.py  race_control_tools.py  session_result_tools.py  sessions_tools.py  starting_grid_tools.py  stints_tools.py  team_radio_tools.py  weather_tools.py
sdk/: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
sdk/examples/: main.py
sdk/openf1/: client.py
sdk/openf1/api/: handler.py
sdk/openf1/api/endpoints/: _base.py  car_data.py  drivers.py  intervals.py  laps.py  location.py  meetings.py  overtakes.py  pit.py  position.py  race_control.py  session_result.py  sessions.py  starting_grid.py  stints.py  team_radio.py  weather.py
sdk/openf1/models/: car_data.py  driver.py  interval.py  lap.py  location.py  meeting.py  overtake.py  pit.py  position.py  race_control.py  session.py  session_result.py  starting_grid.py  stint.py  team_radio.py  weather.py
