[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "openf1-sdk"
version = "0.0.1"
description = "A Python SDK for the OpenF1 API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "pydantic",
    "pandas"
]